<resources>
    <string name="app_name">News App</string>
    <string name="title_main">Mandiri News</string>
    <string name="hint_search">search</string>
    <string name="title_headline">Trending News</string>
    <string name="title_card_headline">Title berita</string>
    <string name="headline_source">Source news</string>
    <string name="credit_news">Nama pembuat</string>
    <string name="date">dd/mm/yyyy</string>

    <string name="title">Title</string>
    <string name="author">Author : Lee</string>
    <string name="published">Published at : 22/02/2024</string>
    <string name="source">Source : BBC News</string>
    <string name="description">Description</string>
    <string name="all_news">All News</string>
</resources>